review: all endpoints are tested
